Update and rename acercaDe.html to card.html

--- a/card/card.html
+++ b/card/card.html
@@ -6,7 +6,7 @@
 	<script></script>
 	<title>Acerca de</title>
 
-	<link rel="stylesheet" href="./CSS/tarjeta.css">
+	<link rel="stylesheet" href="card_style.css">
 </head>
 <body>
 	<div id="content">
